--- a/charts/paperless/Chart.yaml
+++ b/charts/paperless/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v2
 name: paperless
 description: 'A community-supported supercharged version of paperless: scan, index and archive all your physical documents'
+icon: https://raw.githubusercontent.com/paperless-ngx/paperless-ngx/b948750d558b58018d1d3393db145d162d44fceb/src-ui/src/assets/logo-notext.svg
 type: application
 version: 0.0.3
 # renovate datasource=docker depName=ghcr.io/paperless-ngx/paperless-ngx
@@ -18,10 +19,6 @@ dependencies:
     version: 12.8.1
     repository: https://charts.bitnami.com/bitnami
     condition: postgresql.enabled
-  - name: mariadb
-    version: 11.5.7
-    repository: https://charts.bitnami.com/bitnami
-    condition: mariadb.enabled
   - name: redis
     repository: https://charts.bitnami.com/bitnami
     version: 17.14.5
