--- a/charts/paperless/values.yaml
+++ b/charts/paperless/values.yaml
@@ -4,21 +4,21 @@
 # This chart inherits from our common library chart. You can check the default values/options here:
 # https://github.com/bjw-s/helm-charts/blob/common-2.2.0/charts/library/common/values.yaml
 #
+controllers:
+  main:
+    containers:
+      main:
+        image:
+          repository: ghcr.io/paperless-ngx/paperless-ngx
+          tag: 1.17.4
+          pullPolicy: IfNotPresent
 
-image:
-  # -- Image repository
-  repository: ghcr.io/paperless-ngx/paperless-ngx
-  # -- Image pull policy
-  pullPolicy: IfNotPresent
-  # -- Image tag
-  tag: 1.17.4
-
-# -- Environment variables [[ref]](https://docs.paperless-ngx.com/configuration/)
-# @default -- See [values.yaml](./values.yaml)
-env:
-  # -- Set the container timezone
-  TZ: UTC
-  # PAPERLESS_SECRET_KEY: ""
+        # -- Environment variables [[ref]](https://docs.paperless-ngx.com/configuration/)
+        # @default -- See [values.yaml](./values.yaml)
+        env:
+          # -- Set the container timezone
+          TZ: UTC
+          # PAPERLESS_SECRET_KEY: ""
 
 service:
   # -- Configures service settings for the chart.
@@ -99,23 +99,6 @@ postgresql:
   auth:
     database: paperless
     postgresPassword: paperless
-  primary:
-    persistence:
-      enabled: false
-      # storageClass: ""
-      # size: 8Gi
-
-# -- Enable and configure mariadb database subchart under this key.
-#    If enabled, the app's db envs will be set for you.
-#    [[ref]](https://github.com/bitnami/charts/tree/main/bitnami/mariadb)
-# @default -- See [values.yaml](./values.yaml)
-mariadb:
-  enabled: false
-  auth:
-    database: paperless
-    username: paperless
-    password: changeme
-    rootPassword: changeme
   primary:
     persistence:
       enabled: false
