--- a/charts/paperless/values.yaml
+++ b/charts/paperless/values.yaml
@@ -83,13 +83,8 @@ resources:
   #   memory: 128Mi
 
 persistence:
-  # -- Configure data volume settings for the chart under this key.
-  data:
-    enabled: false
-    # existingClaim: ""
-
-  # -- Configure media volume settings for the chart under this key.
-  media:
+  # -- Configure storage volume settings for the chart under this key.
+  storage:
     enabled: false
     # existingClaim: ""
 
