Use the storage volume for consume

--- a/charts/paperless/templates/deployment.yaml
+++ b/charts/paperless/templates/deployment.yaml
@@ -126,8 +126,9 @@ spec:
               mountPath: /usr/src/paperless/export
             {{- end }}
             {{- if .consume.enabled }}
-            - name: consume-volume
+            - name: storage-volume
               mountPath: /usr/src/paperless/consume
+              subPath: consume
             {{- end }}
           {{- end }}
             
