--- a/charts/sabnzbd/templates/deployment.yaml
+++ b/charts/sabnzbd/templates/deployment.yaml
@@ -49,7 +49,7 @@ spec:
           lifecycle:
             postStart:
               exec:
-                command: ["/bin/bash", "-c", 'sed -i -e "s/^host_whitelist *=.*$/host_whitelist = ${HOSTNAME:-sabnzbd}, ${HOST_WHITELIST_ENTRIES}/g" /config/sabnzbd.ini']
+                command: ["/bin/bash", "-c", "'sed -i -e \"s/^host_whitelist *=.*$/host_whitelist = ${HOSTNAME:-sabnzbd}, ${HOST_WHITELIST_ENTRIES}/g\" /config/sabnzbd.ini'"]
                     
           ports:
             - name: http
