--- a/charts/sabnzbd/values.yaml
+++ b/charts/sabnzbd/values.yaml
@@ -65,7 +65,7 @@ persistence:
     # -- Where to mount the volume in the main container.
     # Defaults to `/<name_of_the_volume>`,
     # setting to '-' creates the volume but disables the volumeMount.
-    mountPath: # /config
+    mountPath: /config
     # -- Specify if the volume should be mounted read-only.
     readOnly: false
     # -- Override the name suffix that is used for this volume.
