--- a/charts/radarr/templates/service.yaml
+++ b/charts/radarr/templates/service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "common.fullname" . }}
-  labels:
-    {{- include "common.labels" . | nindent 4 }}
+  name: { { include "common.fullname" . } }
+  labels: { { - include "common.labels" . | nindent 4 } }
 spec:
-  type: {{ .Values.service.type }}
+  type: { { .Values.service.type } }
   ports:
-    - port: {{ .Values.service.port }}
+    - port: { { .Values.service.port } }
       targetPort: 7878
       protocol: TCP
       name: http
-  selector:
-    {{- include "common.selectorLabels" . | nindent 4 }}
+  selector: { { - include "common.selectorLabels" . | nindent 4 } }
