--- a/charts/sonarr/templates/pvc.yaml
+++ b/charts/sonarr/templates/pvc.yaml
@@ -18,7 +18,10 @@ apiVersion: v1
 metadata:
   name: {{ $pvcName }}
   labels:
-  {{- include "common.labels" $ | nindent 4 }}
+    {{- include "common.labels" $ | nindent 4 }}
+    {{- with $persistenceValues.extraLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
   annotations:
     {{- if $persistenceValues.retain }}
     "helm.sh/resource-policy": keep
