--- a/charts/calibre/templates/service.yaml
+++ b/charts/calibre/templates/service.yaml
@@ -11,5 +11,9 @@ spec:
       targetPort: 8080
       protocol: TCP
       name: http
+    - port: 8081
+      targetPort: 8081
+      protocol: TCP
+      name: content-server
   selector:
     {{- include "common.selectorLabels" . | nindent 4 }}
