--- a/charts/readarr/values.yaml
+++ b/charts/readarr/values.yaml
@@ -10,6 +10,8 @@ imagePullSecrets: []
 nameOverride: ''
 fullnameOverride: ''
 
+strategyType: Recreate
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
