Update deployment strategy to RollingUpdate type

--- a/charts/paperless/values.yaml
+++ b/charts/paperless/values.yaml
@@ -10,6 +10,8 @@ image:
 nameOverride: ''
 fullnameOverride: ''
 
+strategyType: RollingUpdate
+
 controller:
   kind: Deployment
   # -- The number of replicas.
