--- a/charts/fava/values.yaml
+++ b/charts/fava/values.yaml
@@ -14,6 +14,8 @@ imagePullSecrets: []
 nameOverride: ''
 fullnameOverride: ''
 
+strategyType: RollingUpdate
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
