--- a/charts/sonarr/templates/deployment.yaml
+++ b/charts/sonarr/templates/deployment.yaml
@@ -11,6 +11,8 @@ spec:
   selector:
     matchLabels:
       {{- include "common.selectorLabels" . | nindent 6 }}
+  strategy:
+    type: {{ .Values.strategyType | default "RollingUpdate" }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
