--- a/charts/fava/templates/deployment.yaml
+++ b/charts/fava/templates/deployment.yaml
@@ -36,6 +36,17 @@ spec:
           env:
             - name: BEANCOUNT_FILE
               value: "{{ .Values.env.beancountFile }}"
+            {{- range $i, $val := .Values.env }}
+            {{- if $val.value }}
+            - name: {{ $val.name | quote }}
+              value: {{ $val.value | quote }}
+            {{- else if $val.valueFrom }}
+            - name: {{ $val.name | quote }}
+              valueFrom:
+                {{- toYaml $val.valueFrom | nindent 16 }}
+            {{- end }}
+            {{- end }}
+
           ports:
             - name: http
               containerPort: 5000
