Update fava chart version to 0.6.0 and BEANCOUNT_FILE value

--- a/charts/fava/values.yaml
+++ b/charts/fava/values.yaml
@@ -64,7 +64,8 @@ ingress:
 volume: {}
 
 env:
-  beancountFile: '/bean/main.bean'
+  - name: BEANCOUNT_FILE
+    value: '/bean/main.bean'
 
 weeklyPriceUpdate:
   enabled: false
