Update fava Chart version to 0.6.3 and add env variables

--- a/charts/fava/templates/cronjob.yaml
+++ b/charts/fava/templates/cronjob.yaml
@@ -26,6 +26,17 @@ spec:
               volumeMounts:
                 - name: bean-volume
                   mountPath: /bean
+              env:
+                {{- range $i, $val := .Values.env }}
+                {{- if $val.value }}
+                - name: {{ $val.name | quote }}
+                  value: {{ $val.value | quote }}
+                {{- else if $val.valueFrom }}
+                - name: {{ $val.name | quote }}
+                  valueFrom:
+                    {{- toYaml $val.valueFrom | nindent 20 }}
+                {{- end }}
+                {{- end }}
 
           volumes:
             - name: bean-volume
