Update code-server version to 3.22.1 and appVersion to 4.91.1

--- a/charts/code-server/templates/deployment.yaml
+++ b/charts/code-server/templates/deployment.yaml
@@ -59,7 +59,7 @@ spec:
 {{ tpl .Values.extraContainers . | indent 8}}
 {{- end }}
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           {{- if .Values.securityContext.enabled }}
           securityContext:
