--- a/charts/code-server/templates/deployment.yaml
+++ b/charts/code-server/templates/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "code-server.fullname" . }}
+  name: {{ include "common.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "code-server.name" . }}
-    helm.sh/chart: {{ include "code-server.chart" . }}
+    app.kubernetes.io/name: {{ include "common.name" . }}
+    helm.sh/chart: {{ include "common.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
@@ -13,12 +13,12 @@ spec:
     type: Recreate
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "code-server.name" . }}
+      app.kubernetes.io/name: {{ include "common.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "code-server.name" . }}
+        app.kubernetes.io/name: {{ include "common.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
       {{- if .Values.podAnnotations }}
       annotations: {{- toYaml .Values.podAnnotations | nindent 8 }}
@@ -86,7 +86,7 @@ spec:
               {{- if .Values.existingSecret }}
                 name: {{ .Values.existingSecret }}
               {{- else }}
-                name: {{ template "code-server.fullname" . }}
+                name: {{ template "common.fullname" . }}
               {{- end }}
                 key: password
         {{- if .Values.extraArgs }}
@@ -145,13 +145,13 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
     {{- end }}
-      serviceAccountName: {{ template "code-server.serviceAccountName" . }}
+      serviceAccountName: {{ template "common.serviceAccountName" . }}
       volumes:
       - name: data
       {{- if .Values.persistence.enabled }}
         {{- if not .Values.persistence.hostPath }}
         persistentVolumeClaim:
-          claimName: {{ .Values.persistence.existingClaim | default (include "code-server.fullname" .) }}
+          claimName: {{ .Values.persistence.existingClaim | default (include "common.fullname" .) }}
         {{- else }}
         hostPath:
           path: {{ .Values.persistence.hostPath }}
