--- a/charts/code-server/templates/secrets.yaml
+++ b/charts/code-server/templates/secrets.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "code-server.fullname" . }}
+  name: {{ include "common.fullname" . }}
   annotations:
     "helm.sh/hook": "pre-install"
   labels:
-    app.kubernetes.io/name: {{ include "code-server.name" . }}
-    helm.sh/chart: {{ include "code-server.chart" . }}
+    app.kubernetes.io/name: {{ include "common.name" . }}
+    helm.sh/chart: {{ include "common.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Opaque
