--- a/charts/code-server/templates/service.yaml
+++ b/charts/code-server/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "code-server.fullname" . }}
+  name: {{ include "common.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "code-server.name" . }}
-    helm.sh/chart: {{ include "code-server.chart" . }}
+    app.kubernetes.io/name: {{ include "common.name" . }}
+    helm.sh/chart: {{ include "common.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
@@ -21,5 +21,5 @@ spec:
       name: {{ .name }}
   {{- end }}
   selector:
-    app.kubernetes.io/name: {{ include "code-server.name" . }}
+    app.kubernetes.io/name: {{ include "common.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
