--- a/charts/code-server/values.yaml
+++ b/charts/code-server/values.yaml
@@ -54,6 +54,23 @@ ingress:
   #    hosts:
   #      - code-server.example.loc
 
+ingress:
+  enabled: false
+  className: ''
+  annotations:
+    {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: &host code-server.example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: fava-example-tls
+  #    hosts:
+  #      - *host
+
 # Optional additional arguments
 extraArgs:
   []
