--- a/charts/fava/templates/cronjob.yaml
+++ b/charts/fava/templates/cronjob.yaml
@@ -37,6 +37,7 @@ spec:
                         echo "Checking if /bean is a git repository..."
                         cd /bean
                         if git rev-parse --is-inside-work-tree >/dev/null 2>&1; then
+                          ls -lisa .
                           echo "Git repository found in /bean. Proceeding with commit..."
                           git config --global user.email "cronjob@example.com"
                           git config --global user.name "Price Update CronJob"
