--- a/charts/fava/templates/cronjob.yaml
+++ b/charts/fava/templates/cronjob.yaml
@@ -42,6 +42,7 @@ spec:
                       cd /bean || exit 1
                       ls -lisa .
                       git --version
+                      git config --global --add safe.directory /bean
                       git status
 
                       if ! git rev-parse --is-inside-work-tree >/dev/null 2>&1; then
