Update fava chart version to 0.7.9 and adjust cronjob exit code

--- a/charts/fava/templates/cronjob.yaml
+++ b/charts/fava/templates/cronjob.yaml
@@ -58,7 +58,7 @@ spec:
                         echo "Git commit and push completed successfully"
                       else
                         echo "Git push failed"
-                        exit 1
+                        exit 0 # We don't want to fail the cronjob if the push fails
                       fi
                       {{- end }}
 
