--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -40,6 +40,11 @@ service:
   type: ClusterIP
   port: 8989
 
+dnsConfig:
+  options:
+    - name: ndots
+      value: '1'
+
 ingress:
   enabled: false
   className: ''
