Update versions and add dnsConfig for radarr, readarr, sabnzbd

--- a/charts/readarr/templates/deployment.yaml
+++ b/charts/readarr/templates/deployment.yaml
@@ -139,7 +139,10 @@ spec:
           {{- end }}
         {{- end }}
         {{- end }}
-      
+
+      dnsConfig:
+        {{- toYaml .Values.dnsConfig | nindent 8 }}
+
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
