--- a/charts/radarr/templates/deployment.yaml
+++ b/charts/radarr/templates/deployment.yaml
@@ -140,6 +140,9 @@ spec:
         {{- end }}
         {{- end }}
       
+      dnsConfig:
+        {{- toYaml .Values.dnsConfig | nindent 8 }}
+
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
