--- a/charts/radarr/values.yaml
+++ b/charts/radarr/values.yaml
@@ -186,6 +186,11 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
+dnsConfig:
+  options:
+    - name: ndots
+      value: '1'
+
 nodeSelector: {}
 
 tolerations: []
