--- a/charts/sabnzbd/values.yaml
+++ b/charts/sabnzbd/values.yaml
@@ -174,6 +174,11 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
+dnsConfig:
+  options:
+    - name: ndots
+      value: '1'
+
 nodeSelector: {}
 
 tolerations: []
