--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -24,17 +24,18 @@ serviceAccount:
 podAnnotations: {}
 
 podSecurityContext:
-  {}
-  # fsGroup: 2000
+  enabled: true
+  runAsUser: 1000
+  runAsGroup: 1000
+  fsGroup: 1000
 
 securityContext:
-  {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+  enabled: true
+  runAsUser: 1000
+  runAsGroup: 1000
+  capabilities:
+    drop:
+      - ALL
 
 service:
   type: ClusterIP
@@ -196,3 +197,13 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+# Add volume permissions init container
+volumePermissions:
+  enabled: true
+  securityContext:
+    runAsUser: 0
+  image:
+    repository: busybox
+    tag: latest
+    pullPolicy: IfNotPresent
