--- a/charts/radarr/values.yaml
+++ b/charts/radarr/values.yaml
@@ -10,7 +10,12 @@ imagePullSecrets: []
 nameOverride: ''
 fullnameOverride: ''
 
-strategyType: RollingUpdate
+# -- Using Recreate strategy because:
+# - The config volume contains a SQLite database
+# - SQLite requires exclusive write access
+# - ReadWriteOnce PVC can only be mounted by one pod at a time
+# - During updates, we need the old pod to terminate completely before the new one starts
+strategyType: Recreate
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -24,17 +29,18 @@ serviceAccount:
 podAnnotations: {}
 
 podSecurityContext:
-  {}
-  # fsGroup: 2000
+  enabled: true
+  runAsUser: 1000
+  runAsGroup: 1000
+  fsGroup: 1000
 
 securityContext:
-  {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+  enabled: true
+  runAsUser: 1000
+  runAsGroup: 1000
+  capabilities:
+    drop:
+      - ALL
 
 service:
   type: ClusterIP
@@ -196,3 +202,13 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+# Add volume permissions init container
+volumePermissions:
+  enabled: true
+  securityContext:
+    runAsUser: 0
+  image:
+    repository: busybox
+    tag: latest
+    pullPolicy: IfNotPresent
